<resources>
    <string name="app_name">BrainMatch</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_params">Profile Parameters</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="university">University</string>
    <string name="degree">Degree</string>
    <string name="academicYear">Academic Year</string>
    <string name="city">City</string>
    <string name="specialization">Specialization</string>
    <string name="university_hint">CSX</string>
    <string name="degree_hint">B.Tech</string>
    <string name="academicYear_hint">20XX - XX</string>
    <string name="city_hint">XXXX</string>
    <string name="specialization_hint">XXX</string>
    <string name="votre_profile">Votre Profile</string>
</resources>